@@ -579,6 +579,9 @@ Trunk -  Unreleased
     HIVE-1823 upgrade the database thrift interface to allow parameters key-value
     pairs (Ning Zhang via namit)
 
+    HIVE-1508 Add cleanup method for HiveHistory
+    (Edward Capriolo via namit)
+
   TESTS
 
     HIVE-1464. improve  test query performance
